[package]
name = "AOJ"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

[[bin]]
name = "ALDS1_1_A"
path = "ALDS1/ALDS1_1_A.rs"

[[bin]]
name = "ALDS1_1_B"
path = "ALDS1/ALDS1_1_B.rs"

[[bin]]
name = "ALDS1_1_C"
path = "ALDS1/ALDS1_1_C.rs"

[[bin]]
name = "ALDS1_1_D"
path = "ALDS1/ALDS1_1_D.rs"

[[bin]]
name = "ALDS1_2_A"
path = "ALDS1/ALDS1_2_A.rs"

[[bin]]
name = "ALDS1_2_B"
path = "ALDS1/ALDS1_2_B.rs"

[[bin]]
name = "ALDS1_2_C"
path = "ALDS1/ALDS1_2_C.rs"

[[bin]]
name = "ALDS1_2_D"
path = "ALDS1/ALDS1_2_D.rs"

[[bin]]
name = "ALDS1_3_A"
path = "ALDS1/ALDS1_3_A.rs"

[[bin]]
name = "ALDS1_3_B"
path = "ALDS1/ALDS1_3_B.rs"

[[bin]]
name = "ALDS1_3_C"
path = "ALDS1/ALDS1_3_C.rs"

[[bin]]
name = "ALDS1_3_D"
path = "ALDS1/ALDS1_3_D.rs"

[[bin]]
name = "ALDS1_4_A"
path = "ALDS1/ALDS1_4_A.rs"

[[bin]]
name = "ALDS1_4_B"
path = "ALDS1/ALDS1_4_B.rs"

[[bin]]
name = "ALDS1_4_C"
path = "ALDS1/ALDS1_4_C.rs"

[[bin]]
name = "ALDS1_4_D"
path = "ALDS1/ALDS1_4_D.rs"
