[package]
name = "abc170"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"


########################
##  05_binary-search  ##
########################

[[bin]]
name = "18-ALDS1-4-B"
path = "selections-for-intermediate-contestants/05-binary-search/18-ALDS1-4-B.rs"

[[bin]]
name = "19-joi2009ho_b"
path = "selections-for-intermediate-contestants/05-binary-search/19-joi2009ho_b.rs"

[[bin]]
name = "20-abc007"
path = "selections-for-intermediate-contestants/05-binary-search/20-abc077-c.rs"

[[bin]]
name = "21-abc023-d"
path = "selections-for-intermediate-contestants/05-binary-search/21-abc023-d.rs"

[[bin]]
name = "22-arc054_b"
path = "selections-for-intermediate-contestants/05-binary-search/22-arc054_b.rs"

[[bin]]
name = "23-joi2008ho_c"
path = "selections-for-intermediate-contestants/05-binary-search/23-joi2008ho_c.rs"


##############################
##  08_dp-knapsack-problem  ##
##############################

[[bin]]
name = "34-ALDS1-10-A"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/34-ALDS1-10-A.rs"

[[bin]]
name = "35-DPL-1-B"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/35-DPL-1-B.rs"

[[bin]]
name = "36-DPL-1-C"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/36-DPL-1-C.rs"

[[bin]]
name = "37-DPL-1-A"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/37-DPL-1-A.rs"

[[bin]]
name = "38-ALDS1-10-C"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/38-ALDS1-10-C.rs"

[[bin]]
name = "39-joi2011yo-d"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/39-joi2011yo-d.rs"

[[bin]]
name = "40-joi2012yo-d"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/40-joi2012yo-d.rs"

[[bin]]
name = "41-joi2013yo-d"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/41-joi2013yo-d.rs"

[[bin]]
name = "42-joi2015yo-d"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/42-joi2015yo-d.rs"

[[bin]]
name = "43-pakencamp-2019-day3-d"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/43-pakencamp-2019-day3-d.rs"

[[bin]]
name = "44-aoj-1167"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/44-aoj-1167.rs"

[[bin]]
name = "45-aoj-2199"
path = "selections-for-intermediate-contestants/08-dp-knapsack-problem/45-aoj-2199.rs"


#########################
##  09-dp-interval-dp  ##
#########################

[[bin]]
name = "46-ALDS1-10-B"
path = "selections-for-intermediate-contestants/09-dp-interval-dp/46-ALDS1-10-B.rs"

[[bin]]
name = "47-joi2015ho-b"
path = "selections-for-intermediate-contestants/09-dp-interval-dp/47-joi2015ho-b.rs"

[[bin]]
name = "48-aoj-1611"
path = "selections-for-intermediate-contestants/09-dp-interval-dp/48-aoj-1611.rs"

####################
##  11-dp-others  ##
####################

[[bin]]
name = "53-DPL-1-D"
path = "selections-for-intermediate-contestants/11-dp-others/53-DPL-1-D.rs"

[[bin]]
name = "54-abc006-d"
path = "selections-for-intermediate-contestants/11-dp-others/54-abc006-d.rs"

[[bin]]
name = "55-abc134-e"
path = "selections-for-intermediate-contestants/11-dp-others/55-abc134-e.rs"

#################################
##  15-fast-primality-testing  ##
#################################

[[bin]]
name = "68-NTL-1-A"
path = "selections-for-intermediate-contestants/15-fast-primality-testing/68-NTL-1-A.rs"

[[bin]]
name = "69-abc084-d"
path = "selections-for-intermediate-contestants/15-fast-primality-testing/69-abc084-d.rs"

##################################
##  16-fast-modpow-calculation  ##
##################################

[[bin]]
name = "70-NTL-1-B"
path = "selections-for-intermediate-contestants/16-fast-modpow-calculation/70-NTL-1-B.rs"

[[bin]]
name = "71-s8pc-1-e"
path = "selections-for-intermediate-contestants/16-fast-modpow-calculation/71-s8pc-1-e.rs"

################################
##  17-multiplicative-inverse ##
################################

[[bin]]
name = "72-abc034-c"
path = "selections-for-intermediate-contestants/17-multiplicative-inverse/72-abc034-c.rs"

[[bin]]
name = "73-abc145-d"
path = "selections-for-intermediate-contestants/17-multiplicative-inverse/73-abc145-d.rs"

[[bin]]
name = "74-abc021-d"
path = "selections-for-intermediate-contestants/17-multiplicative-inverse/74-abc021-d.rs"

#########################
##  18-culminative-sum ##
#########################

[[bin]]
name = "76-abc034-c"
path = "selections-for-intermediate-contestants/18-culminative-sum/76-nikkei2019-final-a.rs"

[[bin]]
name = "77-joi2010ho-a"
path = "selections-for-intermediate-contestants/18-culminative-sum/77-joi2010ho-a.rs"

[[bin]]
name = "78-joi2011ho1"
path = "selections-for-intermediate-contestants/18-culminative-sum/78-joi2011ho1.rs"

[[bin]]
name = "79-abc106-d"
path = "selections-for-intermediate-contestants/18-culminative-sum/79-abc106-d.rs"

[[bin]]
name = "80-gigacode-2019-d"
path = "selections-for-intermediate-contestants/18-culminative-sum/80-gigacode-2019-d.rs"

[[bin]]
name = "81-abc014-3"
path = "selections-for-intermediate-contestants/18-culminative-sum/81-abc014-3.rs"

[[bin]]
name = "82-aoj-1611"
path = "selections-for-intermediate-contestants/18-culminative-sum/82-aoj-1611.rs"

[[bin]]
name = "83-joi2015ho-a"
path = "selections-for-intermediate-contestants/18-culminative-sum/83-joi2015ho-a.rs"

[[bin]]
name = "84-joi2012ho4"
path = "selections-for-intermediate-contestants/18-culminative-sum/84-joi2012ho4.rs"

####################
##  19-union-find ##
####################

[[bin]]
name = "85-DSL-1-A"
path = "selections-for-intermediate-contestants/19-union-find/85-DSL-1-A.rs"

[[bin]]
name = "86-abc075-c"
path = "selections-for-intermediate-contestants/19-union-find/86-abc075-c.rs"

[[bin]]
name = "87-abc120-d"
path = "selections-for-intermediate-contestants/19-union-find/87-abc120-d.rs"

##########################
##  20-other-techniques ##
##########################

[[bin]]
name = "88-joi2008ho-a"
path = "selections-for-intermediate-contestants/20-other-techniques/88-joi2008ho-a.rs"

[[bin]]
name = "89-joi2013ho1"
path = "selections-for-intermediate-contestants/20-other-techniques/89-joi2013ho1.rs"


################################
##  22-mathematical-problems  ##
################################

[[bin]]
name = "95-abc149-b"
path = "selections-for-intermediate-contestants/22-mathematical-problems/95-abc149-b.rs"

[[bin]]
name = "96-abc139-d"
path = "selections-for-intermediate-contestants/22-mathematical-problems/96-abc139-d.rs"

[[bin]]
name = "97-abc150-d"
path = "selections-for-intermediate-contestants/22-mathematical-problems/97-abc150-d.rs"

[[bin]]
name = "98-sumitb2019-e"
path = "selections-for-intermediate-contestants/22-mathematical-problems/98-sumitb2019-e.rs"

[[bin]]
name = "99-ddcc2020-qual-d"
path = "selections-for-intermediate-contestants/22-mathematical-problems/99-ddcc2020-qual-d.rs"

[[bin]]
name = "100-tenka1-2018-d"
path = "selections-for-intermediate-contestants/22-mathematical-problems/100-tenka1-2018-d.rs"
