[package]
name = "typical-90problems-of-competitive-programming"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "001"
path = "src/001.rs"

[[bin]]
name = "002"
path = "src/002.rs"


[[bin]]
name = "003"
path = "src/003.rs"
