[package]
name = "typical-90problems-of-competitive-programming"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "001"
path = "src/001.rs"

[[bin]]
name = "002"
path = "src/002.rs"

[[bin]]
name = "003"
path = "src/003.rs"

[[bin]]
name = "004"
path = "src/004.rs"

[[bin]]
name = "006"
path = "src/006.rs"

[[bin]]
name = "007"
path = "src/007.rs"

[[bin]]
name = "008"
path = "src/008.rs"

[[bin]]
name = "010"
path = "src/010.rs"
