[package]
name = "typical-90problems-of-competitive-programming"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "001"
path = "src/001.rs"

[[bin]]
name = "002"
path = "src/002.rs"

[[bin]]
name = "003"
path = "src/003.rs"

[[bin]]
name = "004"
path = "src/004.rs"

[[bin]]
name = "006"
path = "src/006.rs"

[[bin]]
name = "007"
path = "src/007.rs"

[[bin]]
name = "008"
path = "src/008.rs"

[[bin]]
name = "010"
path = "src/010.rs"

[[bin]]
name = "012"
path = "src/012.rs"

[[bin]]
name = "013"
path = "src/013.rs"

[[bin]]
name = "014"
path = "src/014.rs"

[[bin]]
name = "016"
path = "src/016.rs"

[[bin]]
name = "020"
path = "src/020.rs"

[[bin]]
name = "022"
path = "src/022.rs"

[[bin]]
name = "024"
path = "src/024.rs"

[[bin]]
name = "026"
path = "src/026.rs"

[[bin]]
name = "027"
path = "src/027.rs"

[[bin]]
name = "028"
path = "src/028.rs"

[[bin]]
name = "032"
path = "src/032.rs"

[[bin]]
name = "033"
path = "src/033.rs"

[[bin]]
name = "034"
path = "src/034.rs"

[[bin]]
name = "036"
path = "src/036.rs"

[[bin]]
name = "037"
path = "src/037.rs"

[[bin]]
name = "038"
path = "src/038.rs"

[[bin]]
name = "039"
path = "src/039.rs"

[[bin]]
name = "042"
path = "src/042.rs"

[[bin]]
name = "044"
path = "src/044.rs"

[dependencies]
itertools = "0.10.1"
