[package]
name = "abc170"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"


##############
##  abc170  ##
##############

[[bin]]
name = "abc170-a"
path = "abc170/a.rs"

[[bin]]
name = "abc170-b"
path = "abc170/b.rs"

[[bin]]
name = "abc170-c"
path = "abc170/c.rs"

[[bin]]
name = "abc170-d"
path = "abc170/d.rs"


##############
##  abc171  ##
##############

[[bin]]
name = "abc171-a"
path = "abc171/a.rs"

[[bin]]
name = "abc171-b"
path = "abc171/b.rs"

[[bin]]
name = "abc171-c"
path = "abc171/c.rs"

[[bin]]
name = "abc171-d"
path = "abc171/d.rs"


##############
##  abc172  ##
##############

[[bin]]
name = "abc172-a"
path = "abc172/a.rs"

[[bin]]
name = "abc172-b"
path = "abc172/b.rs"

[[bin]]
name = "abc172-c"
path = "abc172/c.rs"

[[bin]]
name = "abc172-d"
path = "abc172/d.rs"


##############
##  abc173  ##
##############

[[bin]]
name = "abc173-a"
path = "abc173/a.rs"

[[bin]]
name = "abc173-b"
path = "abc173/b.rs"

[[bin]]
name = "abc173-c"
path = "abc173/c.rs"

[[bin]]
name = "abc173-d"
path = "abc173/d.rs"


##############
##  abc174  ##
##############

[[bin]]
name = "abc174-a"
path = "abc174/a.rs"

[[bin]]
name = "abc174-b"
path = "abc174/b.rs"

[[bin]]
name = "abc174-c"
path = "abc174/c.rs"

[[bin]]
name = "abc174-d"
path = "abc174/d.rs"


##############
##  abc175  ##
##############

[[bin]]
name = "abc175-a"
path = "abc175/a.rs"

[[bin]]
name = "abc175-b"
path = "abc175/b.rs"

[[bin]]
name = "abc175-c"
path = "abc175/c.rs"

[[bin]]
name = "abc175-d"
path = "abc175/d.rs"


##############
##  abc176  ##
##############

[[bin]]
name = "abc176-a"
path = "abc176/a.rs"

[[bin]]
name = "abc176-b"
path = "abc176/b.rs"

[[bin]]
name = "abc176-c"
path = "abc176/c.rs"

[[bin]]
name = "abc176-d"
path = "abc176/d.rs"

##############
##  abc177  ##
##############

[[bin]]
name = "abc177-a"
path = "abc177/a.rs"

[[bin]]
name = "abc177-b"
path = "abc177/b.rs"

[[bin]]
name = "abc177-c"
path = "abc177/c.rs"

[[bin]]
name = "abc177-d"
path = "abc177/d.rs"

[[bin]]
name = "abc177-e"
path = "abc177/e.rs"

##############
##  abc178  ##
##############

[[bin]]
name = "abc178-a"
path = "abc178/a.rs"

[[bin]]
name = "abc178-b"
path = "abc178/b.rs"

[[bin]]
name = "abc178-c"
path = "abc178/c.rs"

[[bin]]
name = "abc178-d"
path = "abc178/d.rs"

[[bin]]
name = "abc178-e"
path = "abc178/e.rs"

##############
##  abc179  ##
##############

[[bin]]
name = "abc179-a"
path = "abc179/a.rs"

[[bin]]
name = "abc179-b"
path = "abc179/b.rs"

[[bin]]
name = "abc179-c"
path = "abc179/c.rs"

[[bin]]
name = "abc179-d"
path = "abc179/d.rs"

[[bin]]
name = "abc179-e"
path = "abc179/e.rs"

##############
##  abc180  ##
##############

[[bin]]
name = "abc180-a"
path = "abc180/a.rs"

[[bin]]
name = "abc180-b"
path = "abc180/b.rs"

[[bin]]
name = "abc180-c"
path = "abc180/c.rs"

[[bin]]
name = "abc180-d"
path = "abc180/d.rs"

##############
##  abc181  ##
##############

[[bin]]
name = "abc181-a"
path = "abc181/a.rs"

[[bin]]
name = "abc181-b"
path = "abc181/b.rs"

[[bin]]
name = "abc181-c"
path = "abc181/c.rs"

[[bin]]
name = "abc181-d"
path = "abc181/d.rs"

[[bin]]
name = "abc181-e"
path = "abc181/e.rs"

##############
##  abc182  ##
##############

[[bin]]
name = "abc182-a"
path = "abc182/a.rs"

[[bin]]
name = "abc182-b"
path = "abc182/b.rs"

[[bin]]
name = "abc182-c"
path = "abc182/c.rs"

[[bin]]
name = "abc182-d"
path = "abc182/d.rs"

[[bin]]
name = "abc182-e"
path = "abc182/e.rs"
