[package]
name = "abc170"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10.3"
proconio = "0.3.6"

##############
##  abc167  ##
##############

[[bin]]
name = "abc167-e"
path = "abc167/e.rs"

##############
##  abc170  ##
##############

[[bin]]
name = "abc170-a"
path = "abc170/a.rs"

[[bin]]
name = "abc170-b"
path = "abc170/b.rs"

[[bin]]
name = "abc170-c"
path = "abc170/c.rs"

[[bin]]
name = "abc170-d"
path = "abc170/d.rs"


##############
##  abc171  ##
##############

[[bin]]
name = "abc171-a"
path = "abc171/a.rs"

[[bin]]
name = "abc171-b"
path = "abc171/b.rs"

[[bin]]
name = "abc171-c"
path = "abc171/c.rs"

[[bin]]
name = "abc171-d"
path = "abc171/d.rs"


##############
##  abc172  ##
##############

[[bin]]
name = "abc172-a"
path = "abc172/a.rs"

[[bin]]
name = "abc172-b"
path = "abc172/b.rs"

[[bin]]
name = "abc172-c"
path = "abc172/c.rs"

[[bin]]
name = "abc172-d"
path = "abc172/d.rs"


##############
##  abc173  ##
##############

[[bin]]
name = "abc173-a"
path = "abc173/a.rs"

[[bin]]
name = "abc173-b"
path = "abc173/b.rs"

[[bin]]
name = "abc173-c"
path = "abc173/c.rs"

[[bin]]
name = "abc173-d"
path = "abc173/d.rs"


##############
##  abc174  ##
##############

[[bin]]
name = "abc174-a"
path = "abc174/a.rs"

[[bin]]
name = "abc174-b"
path = "abc174/b.rs"

[[bin]]
name = "abc174-c"
path = "abc174/c.rs"

[[bin]]
name = "abc174-d"
path = "abc174/d.rs"

[[bin]]
name = "abc174-e"
path = "abc174/e.rs"

##############
##  abc175  ##
##############

[[bin]]
name = "abc175-a"
path = "abc175/a.rs"

[[bin]]
name = "abc175-b"
path = "abc175/b.rs"

[[bin]]
name = "abc175-c"
path = "abc175/c.rs"

[[bin]]
name = "abc175-d"
path = "abc175/d.rs"

[[bin]]
name = "abc175-e"
path = "abc175/e.rs"


##############
##  abc176  ##
##############

[[bin]]
name = "abc176-a"
path = "abc176/a.rs"

[[bin]]
name = "abc176-b"
path = "abc176/b.rs"

[[bin]]
name = "abc176-c"
path = "abc176/c.rs"

[[bin]]
name = "abc176-d"
path = "abc176/d.rs"

[[bin]]
name = "abc176-e"
path = "abc176/e.rs"

##############
##  abc177  ##
##############

[[bin]]
name = "abc177-a"
path = "abc177/a.rs"

[[bin]]
name = "abc177-b"
path = "abc177/b.rs"

[[bin]]
name = "abc177-c"
path = "abc177/c.rs"

[[bin]]
name = "abc177-d"
path = "abc177/d.rs"

[[bin]]
name = "abc177-e"
path = "abc177/e.rs"

##############
##  abc178  ##
##############

[[bin]]
name = "abc178-a"
path = "abc178/a.rs"

[[bin]]
name = "abc178-b"
path = "abc178/b.rs"

[[bin]]
name = "abc178-c"
path = "abc178/c.rs"

[[bin]]
name = "abc178-d"
path = "abc178/d.rs"

[[bin]]
name = "abc178-e"
path = "abc178/e.rs"

##############
##  abc179  ##
##############

[[bin]]
name = "abc179-a"
path = "abc179/a.rs"

[[bin]]
name = "abc179-b"
path = "abc179/b.rs"

[[bin]]
name = "abc179-c"
path = "abc179/c.rs"

[[bin]]
name = "abc179-d"
path = "abc179/d.rs"

[[bin]]
name = "abc179-e"
path = "abc179/e.rs"

##############
##  abc180  ##
##############

[[bin]]
name = "abc180-a"
path = "abc180/a.rs"

[[bin]]
name = "abc180-b"
path = "abc180/b.rs"

[[bin]]
name = "abc180-c"
path = "abc180/c.rs"

[[bin]]
name = "abc180-d"
path = "abc180/d.rs"

[[bin]]
name = "abc180-e"
path = "abc180/e.rs"

##############
##  abc181  ##
##############

[[bin]]
name = "abc181-a"
path = "abc181/a.rs"

[[bin]]
name = "abc181-b"
path = "abc181/b.rs"

[[bin]]
name = "abc181-c"
path = "abc181/c.rs"

[[bin]]
name = "abc181-d"
path = "abc181/d.rs"

[[bin]]
name = "abc181-e"
path = "abc181/e.rs"

##############
##  abc182  ##
##############

[[bin]]
name = "abc182-a"
path = "abc182/a.rs"

[[bin]]
name = "abc182-b"
path = "abc182/b.rs"

[[bin]]
name = "abc182-c"
path = "abc182/c.rs"

[[bin]]
name = "abc182-d"
path = "abc182/d.rs"

[[bin]]
name = "abc182-e"
path = "abc182/e.rs"


##############
##  abc183  ##
##############

[[bin]]
name = "abc183-a"
path = "abc183/a.rs"

[[bin]]
name = "abc183-b"
path = "abc183/b.rs"

[[bin]]
name = "abc183-c"
path = "abc183/c.rs"

[[bin]]
name = "abc183-d"
path = "abc183/d.rs"

[[bin]]
name = "abc183-e"
path = "abc183/e.rs"


##############
##  abc184  ##
##############

[[bin]]
name = "abc184-a"
path = "abc184/a.rs"

[[bin]]
name = "abc184-b"
path = "abc184/b.rs"

[[bin]]
name = "abc184-c"
path = "abc184/c.rs"

[[bin]]
name = "abc184-d"
path = "abc184/d.rs"

[[bin]]
name = "abc184-e"
path = "abc184/e.rs"

##############
##  abc185  ##
##############

[[bin]]
name = "abc185-a"
path = "abc185/a.rs"

[[bin]]
name = "abc185-b"
path = "abc185/b.rs"

[[bin]]
name = "abc185-c"
path = "abc185/c.rs"

[[bin]]
name = "abc185-d"
path = "abc185/d.rs"

[[bin]]
name = "abc185-e"
path = "abc185/e.rs"

##############
##  abc186  ##
##############

[[bin]]
name = "abc186-a"
path = "abc186/a.rs"

[[bin]]
name = "abc186-b"
path = "abc186/b.rs"

[[bin]]
name = "abc186-c"
path = "abc186/c.rs"

[[bin]]
name = "abc186-d"
path = "abc186/d.rs"

[[bin]]
name = "abc186-e"
path = "abc186/e.rs"

##############
##  abc187  ##
##############

[[bin]]
name = "abc187-a"
path = "abc187/a.rs"

[[bin]]
name = "abc187-b"
path = "abc187/b.rs"

[[bin]]
name = "abc187-c"
path = "abc187/c.rs"

[[bin]]
name = "abc187-d"
path = "abc187/d.rs"

[[bin]]
name = "abc187-e"
path = "abc187/e.rs"

##############
##  abc188  ##
##############

[[bin]]
name = "abc188-a"
path = "abc188/a.rs"

[[bin]]
name = "abc188-b"
path = "abc188/b.rs"

[[bin]]
name = "abc188-c"
path = "abc188/c.rs"

[[bin]]
name = "abc188-d"
path = "abc188/d.rs"

[[bin]]
name = "abc188-e"
path = "abc188/e.rs"

##############
##  abc189  ##
##############

[[bin]]
name = "abc189-a"
path = "abc189/a.rs"

[[bin]]
name = "abc189-b"
path = "abc189/b.rs"

[[bin]]
name = "abc189-c"
path = "abc189/c.rs"

[[bin]]
name = "abc189-d"
path = "abc189/d.rs"

[[bin]]
name = "abc189-e"
path = "abc189/e.rs"

##############
##  abc190  ##
##############

[[bin]]
name = "abc190-a"
path = "abc190/a.rs"

[[bin]]
name = "abc190-b"
path = "abc190/b.rs"

[[bin]]
name = "abc190-c"
path = "abc190/c.rs"

[[bin]]
name = "abc190-d"
path = "abc190/d.rs"

##############
##  abc191  ##
##############

[[bin]]
name = "abc191-a"
path = "abc191/a.rs"

[[bin]]
name = "abc191-b"
path = "abc191/b.rs"

[[bin]]
name = "abc191-c"
path = "abc191/c.rs"

[[bin]]
name = "abc191-e"
path = "abc191/e.rs"

##############
##  abc192  ##
##############

[[bin]]
name = "abc192-a"
path = "abc192/a.rs"

[[bin]]
name = "abc192-b"
path = "abc192/b.rs"

[[bin]]
name = "abc192-c"
path = "abc192/c.rs"

[[bin]]
name = "abc192-d"
path = "abc192/d.rs"

[[bin]]
name = "abc192-e"
path = "abc192/e.rs"

##############
##  abc193  ##
##############

[[bin]]
name = "abc193-a"
path = "abc193/a.rs"

[[bin]]
name = "abc193-b"
path = "abc193/b.rs"

[[bin]]
name = "abc193-c"
path = "abc193/c.rs"

[[bin]]
name = "abc193-d"
path = "abc193/d.rs"

##############
##  abc194  ##
##############

[[bin]]
name = "abc194-a"
path = "abc194/a.rs"

[[bin]]
name = "abc194-b"
path = "abc194/b.rs"

[[bin]]
name = "abc194-c"
path = "abc194/c.rs"

[[bin]]
name = "abc194-d"
path = "abc194/d.rs"

[[bin]]
name = "abc194-e"
path = "abc194/e.rs"

##############
##  abc195  ##
##############

[[bin]]
name = "abc195-a"
path = "abc195/a.rs"

[[bin]]
name = "abc195-b"
path = "abc195/b.rs"

[[bin]]
name = "abc195-c"
path = "abc195/c.rs"

[[bin]]
name = "abc195-d"
path = "abc195/d.rs"

##############
##  abc196  ##
##############

[[bin]]
name = "abc196-a"
path = "abc196/a.rs"

[[bin]]
name = "abc196-b"
path = "abc196/b.rs"

[[bin]]
name = "abc196-c"
path = "abc196/c.rs"

[[bin]]
name = "abc196-d"
path = "abc196/d.rs"

##############
##  abc197  ##
##############

[[bin]]
name = "abc197-a"
path = "abc197/a.rs"

[[bin]]
name = "abc197-b"
path = "abc197/b.rs"

[[bin]]
name = "abc197-c"
path = "abc197/c.rs"

[[bin]]
name = "abc197-d"
path = "abc197/d.rs"

[[bin]]
name = "abc197-e"
path = "abc197/e.rs"

##############
##  abc198  ##
##############

[[bin]]
name = "abc198-a"
path = "abc198/a.rs"

[[bin]]
name = "abc198-b"
path = "abc198/b.rs"

[[bin]]
name = "abc198-c"
path = "abc198/c.rs"

[[bin]]
name = "abc198-d"
path = "abc198/d.rs"

[[bin]]
name = "abc198-e"
path = "abc198/e.rs"

##############
##  abc199  ##
##############

[[bin]]
name = "abc199-a"
path = "abc199/a.rs"

[[bin]]
name = "abc199-b"
path = "abc199/b.rs"

[[bin]]
name = "abc199-c"
path = "abc199/c.rs"

[[bin]]
name = "abc199-d"
path = "abc199/d.rs"

##############
##  abc200  ##
##############

[[bin]]
name = "abc200-a"
path = "abc200/a.rs"

[[bin]]
name = "abc200-b"
path = "abc200/b.rs"

[[bin]]
name = "abc200-c"
path = "abc200/c.rs"

[[bin]]
name = "abc200-d"
path = "abc200/d.rs"

##############
##  abc201  ##
##############

[[bin]]
name = "abc201-a"
path = "abc201/a.rs"

[[bin]]
name = "abc201-b"
path = "abc201/b.rs"

[[bin]]
name = "abc201-c"
path = "abc201/c.rs"

[[bin]]
name = "abc201-d"
path = "abc201/d.rs"

##############
##  abc202  ##
##############

[[bin]]
name = "abc202-a"
path = "abc202/a.rs"

[[bin]]
name = "abc202-b"
path = "abc202/b.rs"

[[bin]]
name = "abc202-c"
path = "abc202/c.rs"

[[bin]]
name = "abc202-d"
path = "abc202/d.rs"

##############
##  abc203  ##
##############

[[bin]]
name = "abc203-a"
path = "abc203/a.rs"

[[bin]]
name = "abc203-b"
path = "abc203/b.rs"

[[bin]]
name = "abc203-c"
path = "abc203/c.rs"

[[bin]]
name = "abc203-d"
path = "abc203/d.rs"

##############
##  abc204  ##
##############

[[bin]]
name = "abc204-a"
path = "abc204/a.rs"

[[bin]]
name = "abc204-b"
path = "abc204/b.rs"

[[bin]]
name = "abc204-c"
path = "abc204/c.rs"

[[bin]]
name = "abc204-d"
path = "abc204/d.rs"

##############
##  abc205  ##
##############

[[bin]]
name = "abc205-a"
path = "abc205/a.rs"

[[bin]]
name = "abc205-b"
path = "abc205/b.rs"

[[bin]]
name = "abc205-c"
path = "abc205/c.rs"

[[bin]]
name = "abc205-d"
path = "abc205/d.rs"

[[bin]]
name = "abc205-e"
path = "abc205/e.rs"

##############
##  abc206  ##
##############

[[bin]]
name = "abc206-a"
path = "abc206/a.rs"

[[bin]]
name = "abc206-b"
path = "abc206/b.rs"

[[bin]]
name = "abc206-c"
path = "abc206/c.rs"

[[bin]]
name = "abc206-d"
path = "abc206/d.rs"

[[bin]]
name = "abc206-e"
path = "abc206/e.rs"

##############
##  abc207  ##
##############

[[bin]]
name = "abc207-a"
path = "abc207/a.rs"

[[bin]]
name = "abc207-b"
path = "abc207/b.rs"

[[bin]]
name = "abc207-c"
path = "abc207/c.rs"

[[bin]]
name = "abc207-d"
path = "abc207/d.rs"

[[bin]]
name = "abc207-e"
path = "abc207/e.rs"

##############
##  abc208  ##
##############

[[bin]]
name = "abc208-a"
path = "abc208/a.rs"

[[bin]]
name = "abc208-b"
path = "abc208/b.rs"

[[bin]]
name = "abc208-c"
path = "abc208/c.rs"

[[bin]]
name = "abc208-d"
path = "abc208/d.rs"

##############
##  abc239  ##
##############

[[bin]]
name = "abc239-a"
path = "abc239/a.rs"

[[bin]]
name = "abc239-b"
path = "abc239/b.rs"

[[bin]]
name = "abc239-c"
path = "abc239/c.rs"

[[bin]]
name = "abc239-d"
path = "abc239/d.rs"

[[bin]]
name = "abc239-e"
path = "abc239/e.rs"

##############
##  abc240  ##
##############

[[bin]]
name = "abc240-a"
path = "abc240/a.rs"

[[bin]]
name = "abc240-b"
path = "abc240/b.rs"

[[bin]]
name = "abc240-c"
path = "abc240/c.rs"

[[bin]]
name = "abc240-d"
path = "abc240/d.rs"

[[bin]]
name = "abc240-e"
path = "abc240/e.rs"


##############
##  abc241  ##
##############

[[bin]]
name = "abc241-a"
path = "abc241/a.rs"

[[bin]]
name = "abc241-b"
path = "abc241/b.rs"

[[bin]]
name = "abc241-c"
path = "abc241/c.rs"

[[bin]]
name = "abc241-d"
path = "abc241/d.rs"

[[bin]]
name = "abc241-e"
path = "abc241/e.rs"

##############
##  abc242  ##
##############

[[bin]]
name = "abc242-a"
path = "abc242/a.rs"

[[bin]]
name = "abc242-b"
path = "abc242/b.rs"

[[bin]]
name = "abc242-c"
path = "abc242/c.rs"

[[bin]]
name = "abc242-d"
path = "abc242/d.rs"

[[bin]]
name = "abc242-e"
path = "abc242/e.rs"

##############
##  abc243  ##
##############

[[bin]]
name = "abc243-a"
path = "abc243/a.rs"

[[bin]]
name = "abc243-b"
path = "abc243/b.rs"

[[bin]]
name = "abc243-c"
path = "abc243/c.rs"

[[bin]]
name = "abc243-d"
path = "abc243/d.rs"

[[bin]]
name = "abc243-e"
path = "abc243/e.rs"
