[package]
name = "colors"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
proconio = "0.3.6"

[[bin]]
name = "abc126-e"
path = "cyan/abc126e.rs"

[[bin]]
name = "abc129-e"
path = "cyan/abc129e.rs"

[[bin]]
name = "abc131-e"
path = "cyan/abc131e.rs"

[[bin]]
name = "abc133-e"
path = "cyan/abc133e.rs"

[[bin]]
name = "abc142-e"
path = "cyan/abc142e.rs"

[[bin]]
name = "abc144-e"
path = "cyan/abc144e.rs"

[[bin]]
name = "abc145-e"
path = "cyan/abc145e.rs"

[[bin]]
name = "abc151-e"
path = "cyan/abc151e.rs"

[[bin]]
name = "abc152-e"
path = "cyan/abc152e.rs"

[[bin]]
name = "abc154-e"
path = "cyan/abc154e.rs"

[[bin]]
name = "abc155-e"
path = "cyan/abc155e.rs"

[[bin]]
name = "abc156-e"
path = "cyan/abc156e.rs"

[[bin]]
name = "abc157-e"
path = "cyan/abc157e.rs"
