[package]
name = "colors"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
proconio = "0.3.6"

##############
##   cyan   ##
##############

[[bin]]
name = "abc126-e"
path = "cyan/abc126e.rs"

[[bin]]
name = "abc129-e"
path = "cyan/abc129e.rs"

[[bin]]
name = "abc131-e"
path = "cyan/abc131e.rs"

[[bin]]
name = "abc133-e"
path = "cyan/abc133e.rs"

[[bin]]
name = "abc142-e"
path = "cyan/abc142e.rs"

[[bin]]
name = "abc144-e"
path = "cyan/abc144e.rs"

[[bin]]
name = "abc145-e"
path = "cyan/abc145e.rs"

[[bin]]
name = "abc148-f"
path = "cyan/abc148f.rs"

[[bin]]
name = "abc151-e"
path = "cyan/abc151e.rs"

[[bin]]
name = "abc152-e"
path = "cyan/abc152e.rs"

[[bin]]
name = "abc153-f"
path = "cyan/abc153f.rs"

[[bin]]
name = "abc154-e"
path = "cyan/abc154e.rs"

[[bin]]
name = "abc155-d"
path = "cyan/abc155d.rs"

[[bin]]
name = "abc155-e"
path = "cyan/abc155e.rs"

[[bin]]
name = "abc156-e"
path = "cyan/abc156e.rs"

[[bin]]
name = "abc157-e"
path = "cyan/abc157e.rs"

[[bin]]
name = "abc159-e"
path = "cyan/abc159e.rs"

[[bin]]
name = "abc169-e"
path = "cyan/abc169e.rs"

[[bin]]
name = "abc170-e"
path = "cyan/abc170e.rs"

[[bin]]
name = "abc171-e"
path = "cyan/abc171e.rs"

[[bin]]
name = "abc221-e"
path = "cyan/abc221e.rs"

##############
##   blue   ##
##############

[[bin]]
name = "abc130-e"
path = "blue/abc130e.rs"

[[bin]]
name = "abc132-e"
path = "blue/abc132e.rs"

[[bin]]
name = "abc136-e"
path = "blue/abc136e.rs"

[[bin]]
name = "abc137-e"
path = "blue/abc137e.rs"

[[bin]]
name = "abc146-e"
path = "blue/abc146e.rs"

[[bin]]
name = "abc161-e"
path = "blue/abc161e.rs"
