[package]
name = "replay"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
proconio = "0.3.6"
superslice="1.0.0"

##############

[[bin]]
name = "abc245-d"
path = "abc245d.rs"

[[bin]]
name = "abc245-e"
path = "abc245e.rs"

[[bin]]
name = "abc246-d"
path = "abc246d.rs"

[[bin]]
name = "abc246-e"
path = "abc246e.rs"

[[bin]]
name = "abc247-d"
path = "abc247d.rs"

[[bin]]
name = "abc247-e"
path = "abc247e.rs"

[[bin]]
name = "abc248-d"
path = "abc248d.rs"

[[bin]]
name = "abc248-e"
path = "abc248e.rs"

[[bin]]
name = "abc249-d"
path = "abc249d.rs"

[[bin]]
name = "abc250-d"
path = "abc250d.rs"

[[bin]]
name = "abc250-e"
path = "abc250e.rs"

[[bin]]
name = "abc251-d"
path = "abc251d.rs"

[[bin]]
name = "abc251-e"
path = "abc251e.rs"
